src/python/xrt_binding.py


def xclCloseContext(handle, xclbinId, ipIndex):
    """
    xclCloseContext() - Close previously opened context
    :param handle: Device handle
    :param xclbinId: UUID of the xclbin image running on the device
    :param ipIndex: IP/CU index in the IP LAYOUT array
    :return: 0 on success or appropriate error number

    Close a previously allocated shared/exclusive context for a compute unit.
    """
    libc.xclCloseContext.restype = ctypes.c_int
    libc.xclCloseContext.argtypes = [xclDeviceHandle, ctypes.c_char_p, ctypes.c_uint]
    return libc.xclCloseContext(handle, xclbinId.bytes, ipIndex)


def xclUpgradeFirmware(handle, fileName):
    """
    Update the device BPI PROM with new image
    :param handle: Device handle
    :param fileName:
    :return: 0 on success or appropriate error number
    """
    libc.xclUpgradeFirmware.restype = ctypes.c_int
    libc.xclUpgradeFirmware.argtypes = [xclDeviceHandle, ctypes.c_void_p]
    return libc.xclUpgradeFirmware(handle, fileName)


def xclUpgradeFirmware2(handle, file1, file2):
    """
    Update the device BPI PROM with new image with clearing bitstream
    :param handle: Device handle
    :param fileName:
    :return: 0 on success or appropriate error number
    """
    libc.xclUpgradeFirmware2.restype = ctypes.c_int
    libc.xclUpgradeFirmware2.argtypes = [xclDeviceHandle, ctypes.c_void_p, ctypes.c_void_p]
    return libc.xclUpgradeFirmware2(handle, file1, file2)


def xclAllocBO(handle, size, domain, flags):
    """
    Allocate a BO of requested size with appropriate flags

    :param handle: (xclDeviceHandle) device handle
    :param size: (size_t) Size of buffer
    :param domain: (xclBOKind) Memory domain
    :param flags: (unsigned int) Specify bank information, etc
    :return: BO handle
    """
    libc.xclAllocBO.restype = ctypes.c_uint
    libc.xclAllocBO.argtypes = [xclDeviceHandle, ctypes.c_size_t, ctypes.c_int, ctypes.c_uint]
    return libc.xclAllocBO(handle, size, domain.value, flags)

def xclFreeBO(handle, boHandle):
    """
    Free a previously allocated BO

    :param handle: device handle
    :param boHandle: BO handle
    """
    libc.xclFreeBO.restype = None
    libc.xclFreeBO.argtypes = [xclDeviceHandle, ctypes.c_uint]
    libc.xclFreeBO(handle, boHandle)

def xclMapBO(handle, boHandle, write):
    """
    Memory map BO into user's address space

    :param handle: (xclDeviceHandle) device handle
    :param boHandle: (unsigned int) BO handle
    :param write: (boolean) READ only or READ/WRITE mapping
    :return: (void pointer) Memory mapped buffer

    Map the contents of the buffer object into host memory
    To unmap the buffer call POSIX unmap() on mapped void * pointer returned from xclMapBO
    """
    prop = xclBOProperties()
    xclGetBOProperties(handle, boHandle, prop)
    libc.xclMapBO.restype = ctypes.POINTER(ctypes.c_char * prop.size)
    libc.xclMapBO.argtypes = [xclDeviceHandle, ctypes.c_uint, ctypes.c_bool]
    ptr = libc.xclMapBO(handle, boHandle, write)
    return ptr


def xclSyncBO(handle, boHandle, direction, size, offset):
    """
    Synchronize buffer contents in requested direction

    :param handle: (xclDeviceHandle) device handle
    :param boHandle: (unsigned int) BO handle
    :param direction: (xclBOSyncDirection) To device or from device
    :param size: (size_t) Size of data to synchronize
    :param offset: (size_t) Offset within the BO
    :return: 0 on success or standard errno
    """
    libc.xclSyncBO.restype = ctypes.c_uint
    libc.xclSyncBO.argtypes = [xclDeviceHandle, ctypes.c_uint, ctypes.c_int, ctypes.c_size_t, ctypes.c_size_t]
    return libc.xclSyncBO(handle, boHandle, direction.value, size, offset)


def xclGetBOProperties(handle, boHandle, properties):
    """
    Obtain xclBOProperties struct for a BO

    :param handle: (xclDeviceHandle) device handle
    :param boHandle: (unsigned int) BO handle
    :param properties: BO properties struct pointer
    :return: 0 on success
    """
    libc.xclGetBOProperties.restype = ctypes.c_int
    libc.xclGetBOProperties.argtypes = [xclDeviceHandle, ctypes.c_uint, ctypes.POINTER(xclBOProperties)]
    return libc.xclGetBOProperties(handle, boHandle, properties)


def xclExecBuf(handle, cmdBO):
    """
    xclExecBuf() - Submit an execution request to the embedded (or software) scheduler
    :param handle: Device handle
    :param cmdBO: BO handle containing command packet
    :return: 0 or standard error number

    Submit an exec buffer for execution. The exec buffer layout is defined by struct ert_packet
    which is defined in file *ert.h*. The BO should been allocated with DRM_XOCL_BO_EXECBUF flag.
    """
    libc.xclExecBuf.restype = ctypes.c_int
    libc.xclExecBuf.argtypes = [xclDeviceHandle, ctypes.c_uint]
    return libc.xclExecBuf(handle, cmdBO)


def xclExecWait(handle, timeoutMilliSec):
    """
    xclExecWait() - Wait for one or more execution events on the device
    :param handle: Device handle
    :param timeoutMilliSec: How long to wait for
    :return:  Same code as poll system call

    Wait for notification from the hardware. The function essentially calls "poll" system
    call on the driver file handle. The return value has same semantics as poll system call.
    If return value is > 0 caller should check the status of submitted exec buffers
    """
    libc.xclExecWait.restype = ctypes.c_size_t
    libc.xclExecWait.argtypes = [xclDeviceHandle, ctypes.c_int]
    return libc.xclExecWait(handle, timeoutMilliSec)

def xclReadBO(handle, boHandle, dst, size, skip):
    libc.xclReadBO.restype = ctypes.c_int
    libc.xclReadBO.argtypes = [xclDeviceHandle, ctypes.c_uint, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t]
    return libc.xclReadBO(handle, boHandle, dst, size, skip)
